[build-system]
requires = ["setuptools >= 78.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guess-cli"
authors = [
    {name = "kr4us3r", email = "bakemonowa@gmail.com"}
]
description = "A fanciful CLI diversion: divine the secret numeral 'twixt 1 and 100"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["version"]

[project.scripts]
guess-cli = "guess_cli.game:main"
